# GitHubTest

./: CMakeLists.txt  README.md  test
include/: Person.h
lib/: libperson.so.1.0
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/person/: CMakeLists.txt  Person.cpp
